improved a littel issue of overflow in html tag

--- a/Mayank Joshi/style.css
+++ b/Mayank Joshi/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     
 }
+html{
+    overflow: hidden;
+}
 body{width: 100%;
     overflow-x: hidden;
     -moz-overflow:hidden;
